[package]
name = "stm32f303-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.2"

[features]
rt = ["cortex-m-rt/device"]